# Ros_materials

./: README.md
ROS2 Basics in 5 days (C++)/: Unit_11_ROS2_Debugging_Tools.md  Unit_1_Introduction_to_the_Course.md  Unit_2_Basic_Concepts.md  Unit_3_ROS1_Bridge.md  Unit_4_ROS2_Topics_Publishers.md  Unit_5_ROS2_Topics_Subscribers_and_interfaces.md  Unit_6_Node_Composition.md  Unit_7_ROS2_Services_Clients.md  Unit_8_ROS2_Services_Servers_&_interfaces.md  Unit_9_ROS2_Actions_Clients.md
ROS2 Basics in 5 days (C++)/src/Mini_Project_1/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/Mini_Project_1/launch/: miniproject.launch.py
ROS2 Basics in 5 days (C++)/src/Mini_Project_1/src/: node_project.cpp
ROS2 Basics in 5 days (C++)/src/bb8/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/bb8/src/: move_bb8.cpp
ROS2 Basics in 5 days (C++)/src/cpp_unit_7_services/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/cpp_unit_7_services/src/: cpp_simple_service_client.cpp  cpp_simple_service_client_ex7_1_node.cpp
ROS2 Basics in 5 days (C++)/src/move_robot/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/move_robot/launch/: move_robot.launch.py
ROS2 Basics in 5 days (C++)/src/move_robot/src/: move_robot.cpp
ROS2 Basics in 5 days (C++)/src/my_components/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/my_components/include/my_components/: moverobot_component.hpp  readodom_component.hpp
ROS2 Basics in 5 days (C++)/src/my_components/launch/: combine_components.launch.py  moverobot_component.launch.py
ROS2 Basics in 5 days (C++)/src/my_components/src/: moverobot_component.cpp  readodom_component.cpp
ROS2 Basics in 5 days (C++)/src/my_package/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/my_package/launch/: my_package_launch_file.launch.py
ROS2 Basics in 5 days (C++)/src/my_package/src/: simple.cpp
ROS2 Basics in 5 days (C++)/src/topic_publisher_pkg/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/topic_publisher_pkg/src/: simple_topic_publisher.cpp
ROS2 Basics in 5 days (C++)/src/topic_subscriber_pkg/: CMakeLists.txt  package.xml
ROS2 Basics in 5 days (C++)/src/topic_subscriber_pkg/src/: simple_topic_subscriber.cpp
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/: CMakeLists.txt
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/unit_8_services_custom_msgs/include/unit_8_services_custom_msgs/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/unit_8_services_custom_msgs/include/unit_8_services_custom_msgs/srv/: my_custom_service_message.h
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/unit_8_services_custom_msgs/include/unit_8_services_custom_msgs/srv/detail/: my_custom_service_message__builder.hpp  (+3 more)
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/unit_8_services_custom_msgs/share/unit_8_services_custom_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/unit_8_services_custom_msgs/share/unit_8_services_custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  unit_8_services_custom_msgs__rosidl_generator_cExport.cmake  unit_8_services_custom_msgs__rosidl_typesupport_cExport.cmake
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/install/unit_8_services_custom_msgs/share/unit_8_services_custom_msgs/srv/: MyCustomServiceMessage.idl  MyCustomServiceMessage.srv  MyCustomServiceMessage_Request.msg
ROS2 Basics in 5 days (C++)/src/unit_8_services_custom_msgs/log/: latest_build
(+1 files in other folders)
